--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+    body {
+        background-color: gray;
+    }
     #root {
         position: absolute;
-        width: 100%;
+        width: 50%;
         height: 100%;
         top: 0;
         bottom: 0;
@@ -12,7 +15,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: rgb(165, 165, 165);
     }
 </style>
 <head>
