kinda done, css shit still

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,7 @@
 <html lang="en">
 <style>
     body {
-        background-color: gray;
-    }
-    #root {
-        position: absolute;
-        width: 50%;
-        height: 100%;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        background-color: rgb(86, 141, 154);
     }
 </style>
 <head>
