--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     body {
         background-color: rgb(86, 141, 154);
     }
+    #root {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+    }
 </style>
 <head>
     <meta charset="UTF-8">
